objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Fee_2__c</fullName>
        <label>Acquisition Fee 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Fee_Profit__c</fullName>
        <label>Acquisition Fee Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Fee__c</fullName>
        <label>Acquisition Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_Purchased_Mile_Year__c</fullName>
        <label>Add. Purchased Mile Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Miles_Adj__c</fullName>
        <label>Additional Miles Adj.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Miles_Chrg__c</fullName>
        <label>Additional Miles Chrg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowed_Miles_Per_Year__c</fullName>
        <label>Allowed Miles Per Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Automobile__c</fullName>
        <label>Automobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_80__c</fullName>
        <label>Back End (80.00%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ca__c</fullName>
        <label>Capped Texes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Reduction_Cash2__c</fullName>
        <label>Cap Reduction (Cash)2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cap_Reduction_Cash__c</fullName>
        <label>Cap Reduction (Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Cost__c</fullName>
        <label>Capital Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_as_Drive_off__c</fullName>
        <label>Cash as Drive off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Con_Van_Residual__c</fullName>
        <label>Con Van Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rebate__c</fullName>
        <label>Customer Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Options__c</fullName>
        <label>Dealer Options</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disclosed_Rate__c</fullName>
        <label>Disclosed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DocFee__c</fullName>
        <label>DocFee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Excess_Mileage_Chrg__c</fullName>
        <label>Excess Mileage Chrg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Factory_Options__c</fullName>
        <label>Factory Options</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_Insurance__c</fullName>
        <label>Fees &amp; Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_and_Insurance_2__c</fullName>
        <label>Fees and Insurance 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Payment__c</fullName>
        <label>Final Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inception_Fees_Due_Added_to_Cap__c</fullName>
        <label>Inception Fees Due (Added to Cap)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <label>Lender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRM__c</fullName>
        <label>MRM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP2__c</fullName>
        <label>MSRP 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP_After_Discount__c</fullName>
        <label>MSRP After Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Advance2__c</fullName>
        <label>Max Advance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Advance__c</fullName>
        <label>Max Advance $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Reserve_Profit__c</fullName>
        <label>Max. Reserve Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_Program__c</fullName>
        <label>Mileage Program</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Trade_as_Cap_Reduction__c</fullName>
        <label>Net Trade as Cap Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Trade_as_Drive_off__c</fullName>
        <label>Net Trade as Drive off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Odometer_Over_Adj__c</fullName>
        <label>Odometer Over Adj.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Price__c</fullName>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Profit__c</fullName>
        <label>Option Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Options__c</fullName>
        <label>Purchase Options</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_as_Cap_Reduction__c</fullName>
        <label>Rebate as Cap Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_as_Drive_off__c</fullName>
        <label>Rebate as Drive off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Due_Still_Owned__c</fullName>
        <label>Remaining Due (Still Owned)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reserve_Rate__c</fullName>
        <label>Reserve Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Base__c</fullName>
        <label>Residual (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Bump2__c</fullName>
        <label>Residual (Bump) $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residual_Bump__c</fullName>
        <label>Residual (Bump) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retention_Rate__c</fullName>
        <label>Retention Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Deposits__c</fullName>
        <label>Security Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Amount__c</fullName>
        <label>Tax Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Fee__c</fullName>
        <label>Tax Credit Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Profit__c</fullName>
        <label>Tax Credit Profit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ACV_Trade__c</fullName>
        <label>Total ACV Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Capital_Cost__c</fullName>
        <label>Total Capital Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Capital_Reduction__c</fullName>
        <label>Total Capital Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Required_on_Delivery__c</fullName>
        <label>Total Cash Required on Delivery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Drive_Off__c</fullName>
        <label>Total Drive Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Equity__c</fullName>
        <label>Total Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Trade__c</fullName>
        <label>Total Gross Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Inception_Fee__c</fullName>
        <label>Total Inception Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Mileage_Allowed__c</fullName>
        <label>Total Mileage Allowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Mileage_Chrg__c</fullName>
        <label>Total Mileage Chrg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Owen_Trade__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Owen Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Residual__c</fullName>
        <label>Total Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price__c</fullName>
        <label>Total Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_In__c</fullName>
        <label>Trade In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade_Profit__c</fullName>
        <label>Trade Profit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upfront_Texes__c</fullName>
        <label>Upfront Texes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Cost2__c</fullName>
        <label>Vehicle Cost 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Cost__c</fullName>
        <label>Vehicle Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Profit_2__c</fullName>
        <label>Vehicle Profit 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Profit__c</fullName>
        <label>Vehicle Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xst_Month_Payment__c</fullName>
        <label>1st Month Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>